Added answer for EX 2 and updated R code for Ex3

--- a/activity0102-rstudio-rmarkdown.Rmd
+++ b/activity0102-rstudio-rmarkdown.Rmd
@@ -20,7 +20,7 @@ A data frame with 1846 rows and 3 variables. The variables are **dataset**, **x*
 
 ### Exercise 2
 
-(The answers for this Exercise are given for you below. But you should clean up some of the narrative so that it only includes what you want to turn in.)
+*Plot* **x** *vs.* **y** *for the  dino dataset. Then, calculate the correlation coefficient between* **x** *and* **y** *for this dataset.*
 
 First let's plot the data in the dino dataset:
 
