--- a/activity0102-rstudio-rmarkdown.Rmd
+++ b/activity0102-rstudio-rmarkdown.Rmd
@@ -88,7 +88,18 @@ circle_data %>%
   summarize(r = cor(x, y))
 ```
 
-The correlation between `x` and `y` is -0.0630. This correlation is closer to zero so it is a slightly worse correlation.\
+The correlation between `x` and `y` is -0.0683. This correlation is further from zero / closer to -1 so it is a slightly better correlation.\
+
 ### Exercise 5
 
-(Add code and narrative as needed. To add R chunks either type out the backticks, curly braces, and the letter `r` or use the Insert chunk button above, green C+.)
+First let's plot all the data at once:
+
+```{r plot-all, fig.height=9, fig.width=12}
+ggplot(data = datasaurus_dozen, aes(x = x, y = y, color = dataset)) +
+  geom_point() + facet_wrap(~ dataset, ncol = 3) + theme(legend.position = "none")
+
+datasaurus_dozen %>%
+  group_by(dataset) %>%
+  summarize(r = cor(x, y)) %>%
+  print(13)
+```
